--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -1,68 +1,68 @@
-名称：构建SM8550内核
+name: 构建SM8550内核
 
-在：
-  workflow_dispatch：
+on:
+  workflow_dispatch:
 
 
-工作：
+jobs:
   
-  建造：
+  build:
     
-    运行：ubuntu-latest
+    runs-on: ubuntu-latest
 
-    步骤：
+    steps:
 
-    - 名称：最大化构建空间
-      用途：easimon/最大化构建空间@master
-      和：
-        root-Reserve-MB：8192
-        温度储力-MB：2048
-        删除dotnet：'真的'
-        删除android：“ true”
-        删除-哈斯尔：“ true”
-        删除CodeQl：'真的'
+    - name: Maximize build space
+      uses: easimon/maximize-build-space@master
+      with:
+        root-reserve-mb: 8192
+        temp-reserve-mb: 2048
+        remove-dotnet: 'true'
+        remove-android: 'true'
+        remove-haskell: 'true'
+        remove-codeql: 'true'
 
-    - 名称：配置git
-      运行：|
-         git config -lobal user.name“ yuanqiongyoukong”
-         git config -lobal user.email“ 413722718@qq.com”
+    - name: Configure Git
+      run: |
+         git config --global user.name "yuanqiongyoukong"
+         git config --global user.email "413722718@qq.com"
     
-    - 名称：安装编译环境
-      运行：|
-        sudo apt更新&& sudo apt升级-y
-        sudo apt安装ccache curl git repo python3 python-is-python3 -y
+    - name: 安装编译环境
+      run: |
+        sudo apt update && sudo apt upgrade -y
+        sudo apt install ccache curl git repo python3 python-is-python3 -y
 
-    - 名称：拉取OnePlus 12r 内核清单
-      运行：|
-        mkdir内核&& cd内核
-        repo INIT -U https：//github.com/oneplusoss/kernel_manifest.git -b oneplus/sm8550 -m oneplus_12r_v.xml -深度 = 1
-        repo同步-J $（nproc -all）
-        ＃SED -I'203a \ export lto = thin'kernel_platform /oplus/build/oplus_setup.sh'203A \ export lto = thin'Kernel_platform/oplus/build/oplus_setup.sh
-        ＃sed -i's/extort repack_img = true/export repack_img = false/ig'kernel_platform/oplus/build/build/oplus_setup.sh's/extort repack_img = true/export repack_img = false/ig'kernel_platform/oplus/build/build/oplus_setup.sh
+    - name: 拉取oneplus 12r内核清单
+      run: |
+        mkdir kernel && cd kernel
+        repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b oneplus/sm8550 -m oneplus_12r_v.xml --depth=1
+        repo sync -j$(nproc --all)
+        # sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh
+        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' kernel_platform/oplus/build/oplus_setup.sh
         
-        ＃sed -i's/local default_value = none/local default_value = thin/ig'kernel_platform/oplus/oplus/oplus/oplus/build/build/build/build/oplus_setup.sh's/local default_value = none/local default_value = thin/ig'kernel_platform/oplus/oplus/build/build/build/oplus_setup.sh
-        ＃sed -i的/localdefault_value = enable/localdefault_value = disable/ig'kernel_platform/oplus/oplus/oplus/oplus/oplus/oplus/build/build/oplus_setup.sh'kernel_platform/oplus/oplus/oplus/build/build/oplus_setup.sh
+        # sed -i 's/local default_value=none/local default_value=thin/Ig' kernel_platform/oplus/build/oplus_setup.sh
+        # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh
 
-    -     - 名称：添加内核
-      运行：|
-        CD 内核/kernel_platform/common
-        curl -lss“ https://raw.githubusercontent.com/tiann/kernelsu/main/main/main/main/main/main/main/kernel/setup.sh” | b
+    - name: 添加KernelSU
+      run: |
+        cd kernel/kernel_platform/common
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
         
-    - 名称：添加susfs
-      运行：|
-           CD内核
-           git克隆https://gitlab.com/simonpunk/susfs4ksu.git-b gki-android13-5.15
-           git克隆https://github.com/thewildjames/kernel_patches.git
-           CD kernel_platform
-           cp ../susfs4ksu/kernel_patches/kernelsu/10_enable_susfs_for_ksu.patch ./common/kernelsu/
+    - name: 添加SUSFS
+      run: |
+           cd kernel
+           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android13-5.15
+           git clone https://github.com/TheWildJames/kernel_patches.git
+           cd kernel_platform
+           cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/KernelSU/
            cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch ./common/
            cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
            cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
 
-           ＃应用补丁
-           cd ./common/kernelsu
-           补丁-P1-前面<10_enable_susfs_for_ksu.patch ||真的
-           光盘 ..
+           # Apply patches
+           cd ./common/KernelSU
+           patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
+           cd ..
            patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
            cp ../../kernel_patches/69_hide_stuff.patch ./
            patch -p1 -F 3 < 69_hide_stuff.patch
