更新 Build-KernelSU-Next.yml

--- a/.github/workflows/Build-KernelSU-Next.yml
+++ b/.github/workflows/Build-KernelSU-Next.yml
@@ -28,8 +28,8 @@ jobs:
 
      - name: Configure Git
        run: |
-        git config --global user.name "wuua"
-        git config --global user.email "3436678798@qq.com"
+        git config --global user.name "yuanqiongyoukong"
+        git config --global user.email "413722718@qq.com"
 
      - name: Clean up disk space
        run: |
