--- a/.github/workflows/Build-KernelSU-Next-SUSFS.yml
+++ b/.github/workflows/Build-KernelSU-Next-SUSFS.yml
@@ -5,23 +5,23 @@ on:
       CPU:
         description: "分支"
         required: true
-        default: 'sm8550'
+        default: 'sm7675'
       FEIL:
         description: "配置文件"
         required: true
-        default: 'oneplus_12r_v'
+        default: 'oneplus_ace_3v_v'
       CPUD:
         description: "处理器代号"
         required: true
-        default: 'kalama'
+        default: 'pineapple'
       ANDROID_VERSION:
         description: "内核安卓版本"
         required: true
-        default: 'android13'
+        default: 'android14'
       KERNEL_VERSION:
         description: "内核版本"
         required: true
-        default: '5.15'
+        default: '6.1'
 
 jobs:
   build:
@@ -40,8 +40,8 @@ jobs:
 
       - name: Configure Git
         run: |
-         git config --global user.name "yuanqiongyoukong"
-         git config --global user.email "413722718@qq.com"
+         git config --global user.name "build"
+         git config --global user.email "3436378798@qq.com"
 
       - name: Install dependencies
         run: |
