--- a/.github/workflows/kernel_ace3-next.yml
+++ b/.github/workflows/kernel_ace3-next.yml
@@ -80,6 +80,7 @@ jobs:
       run: |
         cd kernel
         ./kernel_platform/oplus/build/oplus_build_kernel.sh kalama gki
+       lto=thin
 
     - name: Upload Image
       uses: actions/upload-artifact@v4
