--- a/.github/workflows/ace3-ksu.yml
+++ b/.github/workflows/ace3-ksu.yml
@@ -1,4 +1,4 @@
-name: Build KernelSU Next SUSFS 
+name: 构建 KernelSU Next SUSFS 
 on:
   workflow_dispatch:
     inputs:
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-      - name: Maximize build space
+      - name: 最大化构建空间
         uses: easimon/maximize-build-space@master
         with:
           root-reserve-mb: 8192
@@ -38,10 +38,10 @@ jobs:
           remove-haskell: 'true'
           remove-codeql: 'true'
           
-      - name: Checkout repository 
+      - name: 检出仓库
         uses: actions/checkout@v2 
  
-      - name: Set up environment
+      - name: 设置环境
         run: |
           git config --global user.name  "yuanqiongyoukong"
           git config --global user.email  "413722718@qq.com" 
@@ -51,7 +51,7 @@ jobs:
           chmod a+x ~/repo 
           sudo mv ~/repo /usr/local/bin/repo 
  
-      - name: Initialize repo and sync
+      - name: 初始化 repo 并同步
         run: |
           mkdir kernel_workspace && cd kernel_workspace
           repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b refs/heads/oneplus/${{ github.event.inputs.CPU  }} -m ${{ github.event.inputs.FEIL  }}.xml --depth=1
@@ -61,7 +61,7 @@ jobs:
           sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion
           sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
  
-      - name: Set up KernelSU Next
+      - name: 设置 KernelSU Next
         run: |
           cd kernel_workspace/kernel_platform
           curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next
@@ -70,7 +70,7 @@ jobs:
           echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
           sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
         
-      - name: Set up susfs
+      - name: 设置 susfs
         run: |
           cd kernel_workspace 
           git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}
@@ -81,7 +81,7 @@ jobs:
           cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
           cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
  
-          # Apply patches
+          # 应用补丁
           cd ./KernelSU-Next
           patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
           cd ../common
@@ -102,28 +102,28 @@ jobs:
           cp ../kernel_patches/selinux.c_fix.patch  ./
           patch -p1 -F 3 < selinux.c_fix.patch  
  
-      - name: Modify Makefile for ThinLTO 
+      - name: 修改 Makefile 以支持 ThinLTO
         run: |
           sed -i 's/CFLAGS +=/CFLAGS += -flto=thin -fno-fat-lto-objects/' Makefile 
            
-      - name: Build kernel
+      - name: 构建内核
         run: |
           cd kernel_workspace
           ./kernel_platform/oplus/build/oplus_build_kernel.sh  ${{ github.event.inputs.CPUD  }} gki
          
-      - name: Make AnyKernel3
+      - name: 制作 AnyKernel3
         run: |
           git clone https://github.com/Kernel-SU/AnyKernel3  --depth=1
           rm -rf ./AnyKernel3/.git 
           cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image ./AnyKernel3/
  
-      - name: Upload AnyKernel3
+      - name: 上传 AnyKernel3
         uses: actions/upload-artifact@v4
         with:
           name: AnyKernel3_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
           path: ./AnyKernel3/*
  
-      - name: Upload Image
+      - name: 上传 Image
         uses: actions/upload-artifact@v4
         with:
           name: Image_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
