--- a/.github/workflows/ace3-ksu.yml
+++ b/.github/workflows/ace3-ksu.yml
@@ -1,4 +1,5 @@
 name: 构建 KernelSU Next SUSFS 
+ 
 on:
   workflow_dispatch:
     inputs:
@@ -28,25 +29,24 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
-      - name: 最大化构建空间
-        uses: easimon/maximize-build-space@master
+      - name: 最大化构建空间 
+        uses: easimon/maximize-build-space@master 
         with:
-          root-reserve-mb: 8192
+          root-reserve-mb: 8192 
           temp-reserve-mb: 2048 
           remove-dotnet: 'true'
           remove-android: 'true'
           remove-haskell: 'true'
           remove-codeql: 'true'
-          
-      - name: 检出仓库
-        uses: actions/checkout@v2 
  
-      - name: 设置环境
+      - name: Checkout repository
+        uses: actions/checkout@v4
+ 
+      - name: 设置环境 
         run: |
           git config --global user.name  "yuanqiongyoukong"
           git config --global user.email  "413722718@qq.com" 
-          sudo apt-get update && sudo apt-get install -y build-essential libncurses-dev bison flex libssl-dev python3 git curl 
-          sudo apt update && sudo apt upgrade -y
+          sudo apt-get update && sudo apt-get install -y build-essential libncurses-dev bison flex libssl-dev python3 git curl
           curl https://storage.googleapis.com/git-repo-downloads/repo  > ~/repo
           chmod a+x ~/repo 
           sudo mv ~/repo /usr/local/bin/repo 
@@ -56,8 +56,8 @@ jobs:
           mkdir kernel_workspace && cd kernel_workspace
           repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b refs/heads/oneplus/${{ github.event.inputs.CPU  }} -m ${{ github.event.inputs.FEIL  }}.xml --depth=1
           repo sync
-          rm kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
-          rm kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
+          rm -f kernel_platform/common/android/abi_gki_protected_exports_*
+          rm -f kernel_platform/msm-kernel/android/abi_gki_protected_exports_*
           sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion
           sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
  
@@ -69,62 +69,59 @@ jobs:
           KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
           echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
           sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
-        
+ 
       - name: 设置 susfs
         run: |
-          cd kernel_workspace 
+          cd kernel_workspace
           git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}
           git clone https://github.com/TheWildJames/kernel_patches.git 
-          cd kernel_platform 
+          cd kernel_platform
           cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./KernelSU-Next/
           cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch ./common/
-          cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
-          cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+          cp -r ../susfs4ksu/kernel_patches/fs/* ./common/fs/
+          cp -r ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
  
-          # 应用补丁
-          cd ./KernelSU-Next
+          # 应用补丁 
+          cd ./KernelSU-Next 
           patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
-          cd ../common
-          patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch || true
-          cp ../../kernel_patches/69_hide_stuff.patch  ./
-          patch -p1 -F 3 < 69_hide_stuff.patch  
+          cd ../common 
+          patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch || true 
+          cp ../../kernel_patches/69_hide_stuff.patch  .
+          patch -p1 -F 3 < 69_hide_stuff.patch 
           git add -A && git commit -a -m "BUILD Kernel"
           cd ..
           cd ./msm-kernel && git add -A && git commit -a -m "BUILD Kernel"
           cd ..
-          
-          cp ../kernel_patches/apk_sign.c_fix.patch  ./
+          cp ../kernel_patches/apk_sign.c_fix.patch  .
           patch -p1 -F 3 < apk_sign.c_fix.patch 
-          
-          cp ../kernel_patches/core_hook.c_fix.patch  ./
-          patch -p1 --fuzz=3 < ./core_hook.c_fix.patch 
-          
-          cp ../kernel_patches/selinux.c_fix.patch  ./
-          patch -p1 -F 3 < selinux.c_fix.patch  
+          cp ../kernel_patches/core_hook.c_fix.patch  .
+          patch -p1 --fuzz=3 < core_hook.c_fix.patch 
+          cp ../kernel_patches/selinux.c_fix.patch  .
+          patch -p1 -F 3 < selinux.c_fix.patch 
  
-      - name: 修改 Makefile 以支持 ThinLTO
+      - name: 修改 Makefile 以支持 ThinLTO 
         run: |
-          sed -i 's/CFLAGS +=/CFLAGS += -flto=thin -fno-fat-lto-objects/' Makefile 
-           
+          sed -i 's/CFLAGS +=/CFLAGS += -flto=thin -fno-fat-lto-objects/' kernel_workspace/kernel_platform/Makefile
+ 
       - name: 构建内核
         run: |
           cd kernel_workspace
           ./kernel_platform/oplus/build/oplus_build_kernel.sh  ${{ github.event.inputs.CPUD  }} gki
-         
+ 
       - name: 制作 AnyKernel3
         run: |
           git clone https://github.com/Kernel-SU/AnyKernel3  --depth=1
           rm -rf ./AnyKernel3/.git 
           cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image ./AnyKernel3/
  
-      - name: 上传 AnyKernel3
+      - name: 上传 AnyKernel3 
         uses: actions/upload-artifact@v4
         with:
           name: AnyKernel3_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
           path: ./AnyKernel3/*
  
       - name: 上传 Image
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4 
         with:
           name: Image_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
           path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image
