--- a/.github/workflows/ace3-ksu.yml
+++ b/.github/workflows/ace3-ksu.yml
@@ -8,11 +8,11 @@ on:
         default: 'sm8550'
       FEIL:
         description: "配置文件"
-        required: true
+        required: true 
         default: 'oneplus_12r_v'
       CPUD:
         description: "处理器代号"
-        required: true 
+        required: true
         default: 'kalama'
       ANDROID_VERSION:
         description: "内核安卓版本"
@@ -20,7 +20,7 @@ on:
         default: 'android13'
       KERNEL_VERSION:
         description: "内核版本"
-        required: true
+        required: true 
         default: '5.15'
  
 jobs:
@@ -38,40 +38,40 @@ jobs:
           remove-haskell: 'true'
           remove-codeql: 'true'
  
-      - name: Configure Git 
+      - name: Configure Git
         run: |
          git config --global user.name  "yuanqiongyoukong"
          git config --global user.email  "413722718@qq.com" 
  
-      - name: Install dependencies 
+      - name: Install dependencies
         run: |
-         sudo apt update && sudo apt upgrade -y
+         sudo apt update && sudo apt upgrade -y 
          sudo apt install -y python3 git curl clang lld
  
       - name: Install repo tool
         run: |
-         curl https://storage.googleapis.com/git-repo-downloads/repo  > ~/repo
+         curl https://storage.googleapis.com/git-repo-downloads/repo  > ~/repo 
          chmod a+x ~/repo
          sudo mv ~/repo /usr/local/bin/repo
  
-      - name: Initialize repo and sync
+      - name: Initialize repo and sync 
         run: |
-         mkdir kernel_workspace && cd kernel_workspace 
-         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b refs/heads/oneplus/${{ github.event.inputs.CPU  }} -m ${{ github.event.inputs.FEIL  }}.xml --depth=1
-         repo sync
+         mkdir kernel_workspace && cd kernel_workspace
+         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b refs/heads/oneplus/${{ github.event.inputs.CPU  }} -m ${{ github.event.inputs.FEIL  }}.xml --depth=1 
+         repo sync 
          rm kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
          rm kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
-         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion 
-         sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
+         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion
+         sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion 
  
       - name: Set up KernelSU Next
         run: |
-         cd kernel_workspace/kernel_platform 
-         curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next
+         cd kernel_workspace/kernel_platform
+         curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next 
          cd KernelSU-Next
          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile 
+         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
         
       - name: Set up susfs
         run: |
@@ -84,11 +84,11 @@ jobs:
            cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
            cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
  
-           # Apply patches 
-           cd ./KernelSU-Next 
-           patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
-           cd ../common 
-           patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch || true 
+           # Apply patches
+           cd ./KernelSU-Next
+           patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true 
+           cd ../common
+           patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch || true
            cp ../../kernel_patches/69_hide_stuff.patch  ./
            patch -p1 -F 3 < 69_hide_stuff.patch 
            git add -A && git commit -a -m "BUILD Kernel"
@@ -97,38 +97,46 @@ jobs:
            cd ..
  
            cp ../kernel_patches/apk_sign.c_fix.patch  ./
-           patch -p1 -F 3 < apk_sign.c_fix.patch  
+           patch -p1 -F 3 < apk_sign.c_fix.patch 
  
            cp ../kernel_patches/core_hook.c_fix.patch  ./
            patch -p1 --fuzz=3 < ./core_hook.c_fix.patch 
  
            cp ../kernel_patches/selinux.c_fix.patch  ./
-           patch -p1 -F 3 < selinux.c_fix.patch 
+           patch -p1 -F 3 < selinux.c_fix.patch  
+ 
+      - name: Check for Makefile
+        run: |
+         cd kernel_workspace/kernel_platform 
+         if [ ! -f Makefile ]; then
+           echo "Error: Makefile not found in kernel_platform directory."
+           exit 1
+         fi
  
       - name: Enable ThinLTO in kernel configuration
         run: |
-         cd kernel_workspace/kernel_platform
-         echo "CONFIG_THINLTO=y" >> .config 
+         cd kernel_workspace/kernel_platform 
+         echo "CONFIG_THINLTO=y" >> .config
  
       - name: Build kernel with ThinLTO
         run: |
-         cd kernel_workspace/kernel_platform
+         cd kernel_workspace/kernel_platform 
          make O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CC=clang LD=ld.lld  LLVM=1 LLVM_IAS=1 THINLTO=1 -j$(nproc)
  
       - name: Make AnyKernel3
         run: |
          git clone https://github.com/Kernel-SU/AnyKernel3  --depth=1
-         rm -rf ./AnyKernel3/.git 
+         rm -rf ./AnyKernel3/.git
          cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image ./AnyKernel3/
  
       - name: Upload AnyKernel3
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4 
         with:
          name: AnyKernel3_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
          path: ./AnyKernel3/*
  
       - name: Upload Image
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4 
         with:
          name: Image_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
          path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image
