--- a/.github/workflows/ace3-ksu.yml
+++ b/.github/workflows/ace3-ksu.yml
@@ -59,25 +59,36 @@ jobs:
          mkdir kernel_workspace && cd kernel_workspace
          repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b refs/heads/oneplus/${{ github.event.inputs.CPU  }} -m ${{ github.event.inputs.FEIL  }}.xml --depth=1
          repo sync
+         ls -la
+         ls -la kernel_platform
          rm kernel_platform/common/android/abi_gki_protected_exports_* || echo "No protected exports!"
          rm kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
          sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion
          sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
  
-      - name: Set up KernelSU Next 
+      - name: Check for Makefile
         run: |
          cd kernel_workspace/kernel_platform
-         curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next
+         if [ ! -f Makefile ]; then
+           echo "Error: Makefile not found in kernel_platform directory."
+           ls -la 
+           exit 1
+         fi 
+ 
+      - name: Set up KernelSU Next
+        run: |
+         cd kernel_workspace/kernel_platform
+         curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh"  | bash -s next 
          cd KernelSU-Next
          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
          sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
         
-      - name: Set up susfs 
+      - name: Set up susfs
         run: |
            cd kernel_workspace
            git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}
-           git clone https://github.com/TheWildJames/kernel_patches.git  
+           git clone https://github.com/TheWildJames/kernel_patches.git 
            cd kernel_platform
            cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./KernelSU-Next/
            cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch ./common/
@@ -86,7 +97,7 @@ jobs:
  
            # Apply patches
            cd ./KernelSU-Next
-           patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
+           patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true 
            cd ../common
            patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION  }}-${{ github.event.inputs.KERNEL_VERSION  }}.patch || true
            cp ../../kernel_patches/69_hide_stuff.patch  ./
@@ -103,17 +114,17 @@ jobs:
            patch -p1 --fuzz=3 < ./core_hook.c_fix.patch 
  
            cp ../kernel_patches/selinux.c_fix.patch  ./
-           patch -p1 -F 3 < selinux.c_fix.patch 
+           patch -p1 -F 3 < selinux.c_fix.patch  
  
-      - name: Enable ThinLTO in kernel configuration
+      - name: Enable ThinLTO in kernel configuration 
         run: |
          cd kernel_workspace/kernel_platform
          echo "CONFIG_THINLTO=y" >> .config
  
-      - name: Build kernel with ThinLTO
+      - name: Build kernel with ThinLTO 
         run: |
-         cd kernel_workspace/kernel_platform
-         make -j$(nproc) O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CC="clang" LLVM=1 LLVM_IAS=1 LLVM_THINLTO=1
+         cd kernel_workspace
+         make -j$(nproc) O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CC="clang" LLVM=1 LLVM_IAS=1 LLVM thinlto
  
       - name: Make AnyKernel3
         run: |
@@ -121,14 +132,14 @@ jobs:
          rm -rf ./AnyKernel3/.git
          cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image ./AnyKernel3/
  
-      - name: Upload AnyKernel3 
-        uses: actions/upload-artifact@v4
+      - name: Upload AnyKernel3
+        uses: actions/upload-artifact@v4 
         with:
          name: AnyKernel3_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
          path: ./AnyKernel3/*
  
-      - name: Upload Image 
-        uses: actions/upload-artifact@v4
+      - name: Upload Image
+        uses: actions/upload-artifact@v4 
         with:
          name: Image_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL  }}
          path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD  }}-gki/dist/Image
