--- a/.github/workflows/Build-KernelSU-Next.yml
+++ b/.github/workflows/Build-KernelSU-Next.yml
@@ -5,15 +5,15 @@ on:
       CPU:
         description: "分支"
         required: true
-        default: 'sm8550'
+        default: 'sm7675'
       FEIL:
         description: "配置文件"
         required: true
-        default: 'oneplus_12r_v'
+        default: 'oneplus_ace_3v_v'
       CPUD:
         description: "处理器代号"
         required: true
-        default: 'kalama'
+        default: 'pineapple'
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
    steps:
      - name: Check Out
        uses: actions/checkout@v3
-
+       
      - name: Cleanup
        uses: rokibhasansagar/slimhub_actions@main
 
@@ -62,7 +62,7 @@ jobs:
      - name: Set up KernelSU
        run: |
         cd kernel_workspace/kernel_platform
-        curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s next
+        curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s v1.0.3
         cd KernelSU-Next
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
