--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -76,7 +76,7 @@ jobs:
         cd ${KERNELSU_NAME}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) + 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" ${KERNEL_DIR}/kernel/Makefile 
+        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" ${KERNEL_DIR}/Makefile 
  
     - name: 添加 SUSFS
       run: |
